@@ -29,16 +29,17 @@ public class ResultService {
     }
 
     public ResultResponseDTO toDTO(Result result) {
-        List<DisciplineResponseDTO> disciplines = Collections.emptyList(); // Initialize as empty list by default
+//        List<DisciplineResponseDTO> disciplines = Collections.emptyList(); // Initialize as empty list by default
 
-        if (result.getParticipant().getResults() != null) {
-            disciplines = result.getParticipant().getResults().stream()
-                    .map(r -> new DisciplineResponseDTO(
-                            r.getDiscipline().getId(),
-                            r.getDiscipline().getName(),
-                            r.getDiscipline().getResultType().toString()))
-                    .collect(Collectors.toList());
-        }
+
+//        if (result.getParticipant().getResults() != null) {
+//            disciplines = result.getParticipant().getResults().stream()
+//                    .map(r -> new DisciplineResponseDTO(
+//                            r.getDiscipline().getId(),
+//                            r.getDiscipline().getName(),
+//                            r.getDiscipline().getResultType()))
+//                    .toList();
+//        }
 
         return new ResultResponseDTO(
                 result.getId(),
@@ -47,7 +48,7 @@ public class ResultService {
                 result.getParticipant().getName(),
                 result.getDiscipline().getName(),
                 result.getResultType(),
-                disciplines
+                result.getResult()
         );
     }
 
